Change name on thesis

--- a/Oxford_Thesis.tex
+++ b/Oxford_Thesis.tex
@@ -74,7 +74,7 @@
 %%%%% THESIS / TITLE PAGE INFORMATION
 % Everybody needs to complete the following:
 \title{Suitably impressive thesis title}
-\author{Your Name}
+\author{Robin Timmis}
 \college{Your College}
 
 % Master's candidates who require the alternate title page (with candidate number and word count)
