Plasma definition and some setup

--- a/Oxford_Thesis.tex
+++ b/Oxford_Thesis.tex
@@ -93,6 +93,9 @@
 
 %%%%% YOUR OWN PERSONAL MACROS
 % This is a good place to dump your own LaTeX macros as they come up.
+\usepackage[nolist]{acronym}
+\usepackage{siunitx}
+
 
 % To make text superscripts shortcuts
 	\renewcommand{\th}{\textsuperscript{th}} % ex: I won 4\th place
