--- a/text/abbreviations.tex
+++ b/text/abbreviations.tex
@@ -1,11 +1,21 @@
 % First parameter can be changed eg to "Glossary" or something.
 % Second parameter is the max length of bold terms.
-\begin{mclistof}{List of Abbreviations}{3.2cm}
+\begin{mclistof}{A List of Symbols and Abbreviations}{3.2cm}
 
-\item[1-D, 2-D] One- or two-dimensional, referring in this thesis to spatial dimensions in an image.
+\item[$\epsilon_0$] Permittivity of free space = \qty{8.854e-12}{F.m^{-1}}
+
+
+\item[1D, 2D, 3D] One-, two- or three-dimension(al)
 
 \item[Otter] One of the finest of water mammals.
 
 \item[Hedgehog] Quite a nice prickly friend.
+
+\begin{acronym}
+	\acro{1D}{one-dimension}
+	\acro{2D}{two-dimensions}
+	\acro{3D}{three-dimensions}
+	\acro{ZVP}{Zero Vector Potential}
+\end{acronym}
 
 \end{mclistof} 
