--- a/Oxford_Thesis.tex
+++ b/Oxford_Thesis.tex
@@ -201,7 +201,7 @@
 % Add or remove any chapters you'd like here, by file name (excluding '.tex'):
 \flushbottom
 \include{text/ch1-intro}
-\include{text/ch2-litreview}
+\include{text/ch2-zvp}
 
 
 %% APPENDICES %% 
