More work on plasma criteria

--- a/text/abbreviations.tex
+++ b/text/abbreviations.tex
@@ -2,8 +2,13 @@
 % Second parameter is the max length of bold terms.
 \begin{mclistof}{A List of Symbols and Abbreviations}{3.2cm}
 
+\item[$e$] Absolute charge of an electron = \qty{1.602e-19}{C}
 \item[$\epsilon_0$] Permittivity of free space = \qty{8.854e-12}{F.m^{-1}}
-
+\item[$\lambda_D$]Debye length $\equiv \sqrt{\frac{\epsilon_0KT_e}{n_ee^2}}$
+\item[$n_e$] Plasma electron number density as a function of position
+\item[$n_i$] Plasma ion number density as a function of position
+\item[$T_e$] Plasma electron temperature
+\item[$Z$] Ion charge state in units of $e$
 
 \item[1D, 2D, 3D] One-, two- or three-dimension(al)
 
