--- a/text/ch2-zvp.tex
+++ b/text/ch2-zvp.tex
@@ -1,12 +1,3 @@
-\begin{savequote}[8cm]
-Alles Gescheite ist schon gedacht worden.\\
-Man muss nur versuchen, es noch einmal zu denken.
-
-All intelligent thoughts have already been thought;\\
-what is necessary is only to try to think them again.
-  \qauthor{--- Johann Wolfgang von Goethe \cite{von_goethe_wilhelm_1829}}
-\end{savequote}
-
 \chapter{\label{ch:2-zvp}The Zero Vector Potential Absorption Mechanism}
 
 \minitoc
@@ -16,5 +7,10 @@ Now is presented the Zero Vector Potential mechanism of attosecond absorption, p
 
 %At some point I should briefly chat about other absorption models (I think at the end of the intro - this will also include the stuff above. - Then I will start this chapter by talking about the case where JxB does not apply. ALso in the intro specify that for an overdense plasma, the laser does not propagate and must be reflected and hence we are generally talking about a laser-plasma surface interaction and the implications thereof.) Before this point I also want to discuss preplasmas.
 
-This thesis focuses on the regime where the frequency of the plasma oscillations ($\omega_p \sim \sqrt{S}$)  are greater than the $\mathbf{J}\times \mathbf{B}$ induced plasma electron oscillations at $2\omega_L$. The plasma electrons are then fast enough to compensate the ponderomotive pressure of the laser pulse with the formation of electrostatic fields between electrons and ions and so respond adiabatically to the $\mathbf{J}\times \mathbf{B}$ force. Hence plasma electrons cannot be heated directly by the laser pulse. Note that this requires a sufficiently steep density gradient around the relativistic critical density surface (where $S=1$) to shift the main interaction to a region where this condition on the overdensity is satisfied. Interestingly working through the condition between $\omega_p$ and $\omega_L$ in normalised units suggests the criterion for this regime is $S > 4$, slightly more constrained than $S>1$ as is typically stated \cite{savin2019thesis}.
+This thesis focuses on the so-called `post-ponderomotive' regime where the frequency of the plasma oscillations ($\omega_p \sim \sqrt{n_e}$)  are greater than the $\mathbf{J}\times \mathbf{B}$ induced plasma electron oscillations at $2\omega_L$. The plasma electrons are then fast enough to compensate the ponderomotive pressure of the laser pulse with the formation of electrostatic fields between electrons and ions and so respond adiabatically to the $\mathbf{J}\times \mathbf{B}$ force. Hence plasma electrons cannot be heated directly by the laser pulse. Note that this requires a sufficiently steep density gradient around the relativistic critical density surface (where $S=1$) to shift the main interaction to a region where this condition on the overdensity is satisfied. Interestingly working through the condition between $\omega_p$ and $\omega_L$ in normalised units suggests the criterion for this regime is $S > 4$, slightly more constraining than $S>1$ as is typically stated \cite{savin2019thesis}.
 
+Condition is $\bar{n}_e > 4$. Ie we need four time sthe critical density surface, S=1 is the rel critical dens surface - so we need a0>4?? Hmm confused...
+
+% at some point I must be explicitely clear about why this conditoin ad my sims with S=1 are compatible. This above criterion on S is associated with the bunch electrons. For S=1 we observe great compression of the target surface enabling us to enter the regime where the bunch S>4 whilst the bulk remains at S=1. Can thsi also be used to explain the energy absorption in phase one (bunch formation) ? Eneryg can be absorbed by JxB until the bunch density goes above some value???
+
+So we have entered a regime of adiabaticity where the plasma skin layer is confined within a potential well formed of the ponderomotive pressure and the Coulomb potential.
