Relativistic ablating front theory of ZVP

--- a/text/ch1-intro.tex
+++ b/text/ch1-intro.tex
@@ -18,6 +18,7 @@ what is a plasma
 modelling plasma with PIC codes
 intense lasers and absorption mechanisms?? yes for sure but dont do all just those just below ZVP
 simulation units and similarity parameter
+Frames of reference - lab, sim, ablating front sruface of plasma
 
 what is the story? Based on first section by Alex after the abstract
 Plasma is ubiquitous in our known universe and plasma provides us huge opportunities as a tool to improve our lives
